--- a/samples/c++/CMakeLists.txt
+++ b/samples/c++/CMakeLists.txt
@@ -2,3 +2,4 @@ cmake_minimum_required(VERSION 3.0)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/benchmark)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/recognizer)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/runtimeKey)
