C# sample: "x86_64" folder missing in xcopy command (Post-Build event)

--- a/samples/csharp/recognizer/recognizer.csproj
+++ b/samples/csharp/recognizer/recognizer.csproj
@@ -88,8 +88,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy /y /d  "$(ProjectDir)..\..\..\binaries\windows\*.dll" "$(ProjectDir)$(OutDir)"
-xcopy /y /d  "$(ProjectDir)..\..\..\binaries\windows\*.so" "$(ProjectDir)$(OutDir)"</PostBuildEvent>
+    <PostBuildEvent>xcopy /y /d  "$(ProjectDir)..\..\..\binaries\windows\x86_64\*.dll" "$(ProjectDir)$(OutDir)"
+xcopy /y /d  "$(ProjectDir)..\..\..\binaries\windows\x86_64\*.so" "$(ProjectDir)$(OutDir)"</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>echo $(ProjectDir) &gt; "$(ProjectDir)\Resources\RecognizerProjectDir.txt"</PreBuildEvent>
