--- a/samples/c++/benchmark/benchmark.vcxproj.filters
+++ b/samples/c++/benchmark/benchmark.vcxproj.filters
@@ -15,6 +15,14 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\alpr_utils.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\android_utils.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
     <ClCompile Include="benchmark.cxx">
       <Filter>Source Files</Filter>
     </ClCompile>
