*** Version 3.1.0 *** Fix issue #111, #108, #105 and #104 - Improve VMMR accuracy - Add GPGPU acceleration for NVIDIA Jetson (ARM64) - Improve LPR accuracy on license plates from Kazakhstan - Improve LPR accuracy on license plates from Taiwan

--- a/samples/c++/CMakeLists.txt
+++ b/samples/c++/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 3.0)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/benchmark)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/recognizer)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/runtimeKey)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/trt_optimizer)
