*** Version 3.2.0 *** - Fix issue #117, #115, #114, #99, #97 #92
1/ Added support for Image Enhancement for Night-Vision (IENV) using AI. This feature improves the image quality when you're filming at night. No special harward is require, it works with any camera. Here is a video showing the output of the filter: https://www.youtube.com/embed/QCkLPP1ix-c
More info: https://www.doubango.org/SDKs/anpr/docs/Features.html#image-enhancement-for-night-vision-ienv

2/ Added support for Vehicle Body Style Recognition (VBSR). On NVIDIA Jetson you'll need to generate the plan for this new model. The process will be fast as existing models will be ignored if the corresponding plan exist.
More info: https://www.doubango.org/SDKs/anpr/docs/Features.html#vehicle-body-style-recognition-vbsr

3/ Added more training samples to improved LPR/OCR accuracy

4/ It's now possible to ask the SDK to process and return cars with no plate. JSON configuration entry: https://www.doubango.org/SDKs/anpr/docs/Configuration_options.html#car-noplate-detect-enabled

5/ On ARM, the rectification layer is now fully written in assembler with NEON SIMD acceleration. We recommend enabling this feature on ARM to improve the accuracy for skewed or slanted plates.
More info: https://www.doubango.org/SDKs/anpr/docs/Rectification_layer.html

--- a/samples/csharp/recognizer/recognizer.csproj
+++ b/samples/csharp/recognizer/recognizer.csproj
@@ -26,7 +26,7 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
