*** Version v3.11.0 *** Adds support for NVIDIA Jetpack 5.1.0. Jetson devices supported: Jetson AGX Orin 32 GB production module, Jetson AGX Orin Developer Kit, Jetson Orin NX 16GB production module, Jetson AGX Xavier series, Jetson Xavier NX series modules, Jetson AGX Xavier Developer Kit and Jetson Xavier NX Developer Kit.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 assets/models.tensorrt/optimized/*
+binaries/jetson_tftrt/aarch64/libultimate_alpr-sdk.so
+libultimatePluginTensorRT.so
 *.user
 *.suo
 *.opensdf
